cultural/registrations/static/css/reg.css
/* ... */
#iconbar ul li.mobile {
    display: none;
}

#iconbar ul li:hover {
    border-left: solid 7px #7876f8;
    -webkit-transition: border-left 0.2s ease;
    transition: border-left 0.2s ease;
}

.li-img img {
    width: 34px;
    height: auto;
    margin: 0 auto;
    display: block;
}

#tog-button-desktop .li-img img {
    margin-top: 12.5%;
}

.nav-desc,
.extra-info {
    display: none;
}

#tog-button-desktop {
    display: block;
    width: 85px;
    height: auto;
}

#tog-button-mobile {
    display: none;
}

#tog-button-mobile .li-img,
#tog-button-mobile .li-text {
    transform: none;
}

#tog-button-desktop:hover {
    border-left: solid 0px #7876f8;
}

.nav-item {
    width: 95px;
    height: auto;
    padding: 10% 0 10%;
    cursor: pointer;
}

.li-text {
    text-align: center;
    font-size: calc(1.5vh);
    position: relative;
    left: -95px;
    -webkit-transition: left 100ms ease-in-out;
    transition: left 100ms ease-in-out;
    margin: 10px 0 0;
}

.vis {
    left: 0px;
    -webkit-transition: left 100ms ease-in-out;
    transition: left 100ms ease-in-out;
}

#infobar {
    width: 0;
    height: 100%;
    float: left;
    overflow: hidden;
    z-index: 4000;
}

.infobar-content {
    position: relative;
    opacity: 0;
    padding: 10px 20px;
    -webkit-backface-visibility: hidden;
}

.infobar-content p {
    font-size: 1em;
    text-align: left;
}

.dropdown {
    display: none;
}
.nav-highlight-item {
    border-left: solid 7px #DF9EF3 !important;
}

.expand-menu {
    margin-left: -20px;
    margin-right: -20px;
    width: 300px;
}

.expand-menu-img {
    width: 50px;
    height: auto;
    margin-right: 5px;
    cursor: pointer;
}

.expand-menu-img.active {
    border-style: solid;
    border-width: thin;
    border-color: aqua;
}

.expand-menu-text {
    padding-left: 20px;
    padding-right: 20px;
    height: 0px;
    overflow-y: hidden;
    opacity: 0;
    transition: height 0.2s ease-in, opacity 0.3s ease-in;
}

.expand-menu-text.active {
    height: auto;
    opacity: 1;
    transition: height 0.2s ease-in, opacity 0.3s ease-in;
}
.expand-img-highlight {
    border: solid thin #DF9EF3 !important;
}
.desktop .li-img img {
    border-radius: 50%;
    border: 1px solid white;
    width: 34px;
}
.content {
    position: relative;
    height: 100%;
    margin: auto;
    display: block;
}

.content-img {
    height: 50%;
    margin: auto;
    display: inline-block;
}

.content-text {
    padding-left: 20px;
    padding-right: 100px;
    width: calc(60% - 80px);
    line-height: 100%;
    display: inline-block;
    text-align: justify;
}

#fullpage {
    z-index: 1000;
}

#footer {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 4vh;
    background: #000;
    display: flex;
    color: white;
    display: none;
    z-index: 5000;
}

#social {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

#main {
    padding-left: 100px;
    height: 100%;
}

#links {
    position: absolute;
    right: 0;
    font-size: 2vh;
    line-height: 4vh;
    margin: 0;
    padding: 0;
    list-style: none;
    display: block;
}

#links a,
#floating-footer a {
    color: white;
    text-decoration: none;
}

#links li {
    display: inline;
    margin: 0;
    padding: 0 10px;
}

#social img {
    height: 3vh;
    margin: 0.5vh 5px;
    width: auto;
}

#floating-footer {
    position: fixed;
    z-index: 5000;
    bottom: 50px;
    right: 50px;
    transform-origin: bottom right;
    transform: scale(0.6);
}

.fab-icon {
    height: 120px;
    width: 120px;
    float: left;
}

.triangle-isosceles {
    position: relative;
    padding: 10px;
    margin: 1em 0 3em;
    border-radius: 10px;
}

.triangle-isosceles:after {
    content: "";
    display: block;
    position: absolute;
    bottom: -10px;
    left: calc(50% - 25px);
    width: 0;
    border-width: 15px 15px 0;
    border-style: solid;
    border-color: #000 transparent;
    padding-bottom: 5px;
}

.fab-icon img {
    position: relative;
    margin-left: 10px;
    width: 70px;
    height: 70px;
    left: 50%;
    transform: translateX(-50%);
    border-radius: 50%;
    border: 1px solid rgb(50, 50, 50);
    background-color: black;
    box-shadow: -2px -2px 2px #888888;
}

.fab-desc {
    position: relative;
    top: 0;
    width: 140px;
    height: 40px;
    background-color: black;
    align-content: center;
    vertical-align: middle;
    margin: 0 0 0.8vh 0;
    visibility: hidden;
    border-radius: 1vh;
    border: 1px solid black;
}

.fab-icon:hover .fab-desc {
    visibility: visible;
}

.fab-desc h6 {
    color: white;
    position: relative;
    top: 50%;
    margin: 0 auto 0 auto;
    transform: translateY(-50%);
    font-size: 1.25em;
    text-align: center;
}

#msform {
    width: 60vw;
    margin: 50px auto;
    text-align: center;
    position: relative;
}

#msform fieldset {
    background: white;
    border: 0 none;
    border-radius: 3px;
    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
    padding: 20px 30px;
    box-sizing: border-box;
    width: 88%;
    margin: 0 10%;

    /*stacking fieldsets above each other*/
    position: relative;
}

.add-row,
.delete-row {
    display: inline-block;
    border-radius: 5px;
    border: 2px solid black;
    background-color: black;
    margin: 10px 0 10px 0;
}

.participant-formset {
    padding: 10px 0 10px 0;
    border-bottom: 1px solid gray;
}

footer {
    left: 100px;
    width: 100vw;
}

footer p {
    text-align: center;
}

footer a {
    color: blue;
}

#msform fieldset:not(:first-of-type) {
    display: none;
}

#msform input,
#msform textarea,
#msform select {
    padding: 15px;
    border: 1px solid #ccc;
    border-radius: 3px;
    margin-bottom: 10px;
    width: 100%;
    box-sizing: border-box;
    font-family: 'Raleway', sans-serif;
    color: #2C3E50;
    font-size: 13px;
}

#msform input[type=checkbox] {
    width: 5%;
}
/* ... */

